Add Dolby AC-4 decoder
Signed-off-by: Jyotiraditya Panda <jyotiraditya@aospa.co>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,11 +14,11 @@ on:
       ENABLED_DECODERS:
         description: "Enabled FFmpeg decoder"
         required: true
-        default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 dca mlp truehd'
+        default: 'vorbis opus flac alac pcm_mulaw pcm_alaw mp3 amrnb amrwb aac ac3 eac3 ac4 dca mlp truehd'
       FFMPEG_BRANCH:
         description: "FFmpeg branch"
         required: true
-        default: 'release/7.1'
+        default: 'release/6.1'
       MEDIA3_BRANCH:
         description: "media3 branch"
         required: true
@@ -53,7 +53,7 @@ jobs:
         with:
           java-version: '17'
           distribution: 'zulu'
-          
+
       - name: Set up Android NDK
         run: |
           cd "$GITHUB_WORKSPACE"
@@ -64,9 +64,14 @@ jobs:
       - name: Clone repositories
         run: |
           cd "$GITHUB_WORKSPACE"
-          git clone https://github.com/androidx/media -b ${{ github.event.inputs.MEDIA3_BRANCH }}
+          git clone https://github.com/androidx/media -b ${{ github.event.inputs.MEDIA3_BRANCH }} --depth=1
           cd media/libraries/decoder_ffmpeg
-          git clone git://source.ffmpeg.org/ffmpeg
+          git clone git://source.ffmpeg.org/ffmpeg -b ${{ github.event.inputs.FFMPEG_BRANCH }} --depth=1
+
+      - name: Apply FFmpeg patch
+        run: |
+          cd "$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/ffmpeg
+          git apply "$GITHUB_WORKSPACE"/patches/ffmpeg-ac4-decoder.patch
 
       - name: Build FFmpeg jni
         run: |
@@ -75,9 +80,7 @@ jobs:
           HOST_PLATFORM="linux-x86_64"
           ANDROID_ABI=${{ github.event.inputs.ANDROID_ABI }}
           ENABLED_DECODERS=(${{ github.event.inputs.ENABLED_DECODERS }})
-          cd "$GITHUB_WORKSPACE"/media/libraries/decoder_ffmpeg/ffmpeg
-          git checkout ${{ github.event.inputs.FFMPEG_BRANCH }}
-          FFMPEG_PATH="$(pwd)"
+          FFMPEG_PATH="$GITHUB_WORKSPACE/media/libraries/decoder_ffmpeg/ffmpeg"
           cd "${FFMPEG_MODULE_PATH}/jni"
           ln -s "$FFMPEG_PATH" ffmpeg
           cd "${FFMPEG_MODULE_PATH}/jni"
